[package]
name = "dashmap"
version = "3.11.10"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/xacrimon/dashmap"
homepage = "https://github.com/xacrimon/dashmap"
description = "Blazing fast concurrent HashMap for Rust."
readme = "README.md"
documentation = "https://docs.rs/dashmap"
keywords = ["atomic", "concurrent", "hashmap"]
categories = ["concurrency", "algorithms", "data-structures"]

[features]
default = []
raw-api = []
no_std = ["hashbrown"]
axstd = ["num_cpus/axstd"]

[dependencies]
num_cpus = { version = "1.13.0", default-features = false, features = [
    "axstd",
] }
ahash = { version = "0.7.7", default-features = false }
serde = { version = "1.0.188", optional = true, default-features = false, features = [
    "derive",
] }
cfg-if = "0.1.10"
hashbrown = { version = "0.14.0", optional = true }

[package.metadata.docs.rs]
features = ["raw-api", "serde"]
